TestSuite/PascalABCTests/errors/err0053.pas
const a : set of integer = [1,2,3];

begin
a += [5];
end.